--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,5 +15,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="崔耀龙今天下午有没有好好学习？"
+        android:id="@+id/tvOut"
+        android:layout_above="@+id/btnStartAty1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="131dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="点我得知"
+        android:id="@+id/btnStartAty1"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="190dp" />
+
 </RelativeLayout>
